Fix horizontal scroll on mobile

--- a/src/styles/setup.scss
+++ b/src/styles/setup.scss
@@ -2,10 +2,12 @@ html {
 	line-height: 1.15;
 	-ms-text-size-adjust: 100%;
 	-webkit-text-size-adjust: 100%;
+	overflow-x: hidden;
 }
 body {
 	font-family: $font-body;
 	margin: 0;
+	overflow-x: hidden;
 }
 article,
 aside,
